Updated Resume, Add images for skills section and resolved tile issue in skills section. Changed images for personal projects

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -183,7 +183,17 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
+						<img src="{% static 'img/services/javascript.png' %}" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="feature_item">
 						<img src="{% static 'img/services/figma.png' %}" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="feature_item">
+						<img src="{% static 'img/services/Java.png' %}" alt="">
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
@@ -193,12 +203,17 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
+						<img src="{% static 'img/services/django.png' %}" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="feature_item">
 						<img src="{% static 'img/services/mysql.png' %}" alt="">
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
-						<img src="{% static 'img/services/django.png' %}" alt="">
+						<img src="{% static 'img/services/aws.png' %}" alt="">
 					</div>
 				</div>
 			</div>
@@ -232,9 +247,9 @@
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="{% static 'img/portfolio/github todo application.jpg' %}" alt="">
+								<img class="img-fluid w-100" src="{% static 'img/portfolio/todo_app.png' %}" alt="">
 								<div class="overlay"></div>
-								<a href="{% static 'img/portfolio/github todo application.jpg' %}" class="img-gal">
+								<a href="{% static 'img/portfolio/todo_app.png' %}" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
@@ -250,9 +265,9 @@
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="{% static 'img/portfolio/github ecommerce website.jpg' %}" alt="">
+								<img class="img-fluid w-100" src="{% static 'img/portfolio/ecommerce_website.webp' %}" alt="">
 								<div class="overlay"></div>
-								<a href="{% static 'img/portfolio/github ecommerce website.jpg' %}" class="img-gal">
+								<a href="{% static 'img/portfolio/ecommerce_website.webp' %}" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
@@ -267,17 +282,17 @@
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="{% static 'img/portfolio/github ecommerce website API.jpg' %}"
+								<img class="img-fluid w-100" src="{% static 'img/portfolio/ecommerce_api.jpg' %}"
 									alt="">
 								<div class="overlay"></div>
-								<a href="{% static 'img/portfolio/github ecommerce website API.jpg' %}" class="img-gal">
+								<a href="{% static 'img/portfolio/ecommerce_api.jpg' %}" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="{% static 'https://github.com/raja9112/ecommerce_project_API.git' %}">Ecommerce Website
+								<h4><a href="https://github.com/raja9112/ecommerce_project_API.git">Ecommerce Website
 										API</a></h4>
 							</div>
 						</div>
@@ -526,9 +541,9 @@
 	<script src="js/jquery.ajaxchimp.min.js"></script>
 	<script src="js/mail-script.js"></script>
 	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="js/gmaps.min.js"></script>
-	<script src="js/theme.js"></script>
+	<script src="js/theme.js"></script> -->
 </body>
 
 </html>
